--- a/src/assets/scss/utils/reset.scss
+++ b/src/assets/scss/utils/reset.scss
@@ -130,12 +130,12 @@ html {
   outline: 0;
 }
 
-img,
-audio,
-video {
-  max-width: 100%;
-  height: auto;
-}
+// img,
+// audio,
+// video {
+//   max-width: 100%;
+//   height: auto;
+// }
 audio,
 canvas,
 iframe,
