--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,8 +1,8 @@
-@import 'utils/libs';
-@import 'utils/vars';
-@import 'utils/mixins';
-@import 'utils/fonts';
-@import 'utils/reset';
+@import "utils/libs";
+@import "utils/vars";
+@import "utils/mixins";
+@import "utils/fonts";
+@import "utils/reset";
 
 html {
   line-height: $mainLineHeight;
@@ -23,9 +23,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: $mainFont;
-  font-size: $mainFontSize;
-  font-weight: $mainFontWeight;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -58,8 +55,6 @@ li {
 
 section,
 .section {
-  position: relative;
-  padding: 40px 0;
   @media screen and (max-width: $smDesktopWidth) {
     padding: 36px 0;
   }
@@ -102,5 +97,290 @@ section,
   }
 }
 
+.description-item {
+  &__icon{
+    margin-bottom: 20px;
+  }
+  &__title{
+    margin-bottom: 14px;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: bold;
+  }
+
+  &__text{
+    font-size: 16px;
+    line-height: 28px;
+    font-weight: 300;
+    color: #6c6c6c;
+  }
+}
+
 // Modules:
 // example: @import "modules/my-module.scss";
+
+// === / Common ===
+
+body {
+  @include font-lato;
+
+  color: #414141;
+}
+
+.section-outer {
+}
+
+.section-inner {
+  width: 1180px;
+  margin: 0 auto;
+}
+
+// === / Common ===
+
+// === Header ===
+.section-header {
+  color: #fff;
+  background: url("../img/bg-header.png") no-repeat 50% 50%;
+  background-size: cover;
+  position: relative;
+
+  .section-inner {
+    height: 100vh;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(20, 39, 41, 0.6);
+  }
+
+  &-logo {
+    font-weight: bold;
+    font-size: 24px;
+    flex-shrink: 1;
+    padding-top: 35px;
+  }
+  &-content {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+  }
+  &-wrapper {
+    margin: 0 auto;
+
+    &__title, &__subtitle {
+      text-align: center;
+    }
+
+    &__title {
+      font-weight: bold;
+      font-size: 56px;
+      line-height: 60px;
+      margin-bottom: 16px;
+    }
+    &__subtitle {
+      @include font-montserrat;
+
+      font-size: 18px;
+      line-height: 32px;
+      width: 80%;
+      margin: 0 auto 44px;
+    }
+    &__form {
+      display: flex;
+
+      &-input {
+        flex: 1;
+        padding-right: 44px;
+
+        input {
+          @include font-montserrat;
+          
+          background: rgba(255, 255, 255, .25);
+          color: #fff;
+          font-size: 16px;
+          padding: 16px 20px;
+          border-radius: 4px;
+          width: 100%;
+
+          &::placeholder {
+            color: #fff
+          }
+        }
+      }
+      &-button {
+        button {
+          @include font-montserrat;
+
+          font-size: 16px;
+          background: linear-gradient(to right, #fe985b, #fe4fa7);
+          padding: 16px 20px;
+          cursor: pointer;
+          border-radius: 4px;
+          color: #fff;
+        }
+      }
+    }
+  }
+}
+// === / Header ===
+
+// === Promo ===
+.section-promo {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.section-promo-1 {
+  display: flex;
+
+  &__content,
+  &__content {
+    flex-basis: 50%;
+  }
+
+  &__content {
+    padding-right: 90px;
+
+    .title{
+      font-size: 32px;
+      line-height: 51px;
+      font-weight: bold;
+      margin-bottom: 56px;
+    }
+
+    .description-item {
+      margin-top: 28px;
+    }
+  }
+  &__video {
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+.section-promo-2 {
+  display: flex;
+  padding-top: 86px;
+  margin-top: 120px;
+  border-top: 1px solid #e2e2e2;
+
+  .description-item {
+    text-align: center;
+  }
+
+  .description-item +.description-item {
+    margin-left: 40px;
+  }
+
+}
+// === / Promo ===
+
+// === Founder ===
+.section-founder {
+  background-color: #f6fafd;
+  padding-top: 34px;
+
+  .section-inner{
+    display: flex;
+  }
+
+  &__img {
+    align-self: flex-end;
+  }
+
+  &__content {
+    align-self: center;
+    padding-left: 50px;
+
+    &-text {
+      @include font-montserrat;
+
+      font-size: 24px;
+      line-height: 40px;
+    }
+    &-name {
+      font-size: 24px;
+      line-height: 29px;
+      font-weight: bold;
+    }
+    &-post {
+      font-size: 20px;
+      line-height: 29px;
+    }
+  }
+}
+// === / Founder ===
+
+// === Plans ===
+.section-plans {
+  padding-top: 120px;
+  padding-bottom: 120px;
+
+  &__title,
+  &__subtitle {
+    text-align: center;
+  } 
+
+  &__title {
+    font-size: 36px;
+    line-height: 51px;
+    font-weight: bold;
+  }
+  &__subtitle {
+    font-size: 16px;
+    line-height: 28px;
+    font-weight: 300;
+    margin-bottom: 110px;
+  }
+  &__list {
+    display: flex;
+    justify-content: center;
+
+    &-item {
+      flex-basis: 370px;
+      padding: 60px 45px;
+
+      &_title {
+        font-size: 14px;
+        line-height: 17px;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+      &_price {}
+
+      &_description {
+        font-size: 16px;
+        line-height: 28px;
+        font-weight: 300;
+      }
+      &_button {}
+
+      &.active {
+        background-color: #f6fafd;
+      }
+    }
+  }
+}
+// === / Plans ===
+
+// === Free ===
+.section-free {
+}
+// === / Free ===
+
+// === Footer ===
+.section-footer {
+}
+// === / Footer ===
